metadata/objects/graxleadindex__x.object
<CustomObject>
    <description>graxleadindex</description>
    <externalDataSource>grax_odata</externalDataSource>
    <externalName>graxleadindex</externalName>
    <fields>
        <fullName>Accepted_c__c</fullName>
        <description>Accepted__c</description>
        <externalDeveloperName>Accepted__c</externalDeveloperName>
        <label>Accepted__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Mapped_c__c</fullName>
        <description>Address_Mapped__c</description>
        <externalDeveloperName>Address_Mapped__c</externalDeveloperName>
        <label>Address_Mapped__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnualRevenue_GRAX_float__c</fullName>
        <description>AnnualRevenue_GRAX_float</description>
        <externalDeveloperName>AnnualRevenue_GRAX_float</externalDeveloperName>
        <label>AnnualRevenue_GRAX_float</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualRevenue__c</fullName>
        <description>AnnualRevenue</description>
        <externalDeveloperName>AnnualRevenue</externalDeveloperName>
        <label>AnnualRevenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status_c__c</fullName>
        <description>Approval_Status__c</description>
        <externalDeveloperName>Approval_Status__c</externalDeveloperName>
        <label>Approval_Status__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingLatitude__c</fullName>
        <description>BillingLatitude</description>
        <externalDeveloperName>BillingLatitude</externalDeveloperName>
        <label>BillingLatitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingLongitude__c</fullName>
        <description>BillingLongitude</description>
        <externalDeveloperName>BillingLongitude</externalDeveloperName>
        <label>BillingLongitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Days_c__c</fullName>
        <description>Business_Days__c</description>
        <externalDeveloperName>Business_Days__c</externalDeveloperName>
        <label>Business_Days__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Family_Members_Data_c__c</fullName>
        <description>Business_Family_Members_Data__c</description>
        <externalDeveloperName>Business_Family_Members_Data__c</externalDeveloperName>
        <label>Business_Family_Members_Data__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass_Dupe_Rules_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bypass_Dupe_Rules__c</description>
        <externalDeveloperName>Bypass_Dupe_Rules__c</externalDeveloperName>
        <label>Bypass_Dupe_Rules__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <externalDeveloperName>City</externalDeveloperName>
        <label>City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CleanStatus__c</fullName>
        <description>CleanStatus</description>
        <externalDeveloperName>CleanStatus</externalDeveloperName>
        <label>CleanStatus</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyDunsNumber__c</fullName>
        <description>CompanyDunsNumber</description>
        <externalDeveloperName>CompanyDunsNumber</externalDeveloperName>
        <label>CompanyDunsNumber</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Company</description>
        <externalDeveloperName>Company</externalDeveloperName>
        <label>Company</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition_c__c</fullName>
        <description>Competition__c</description>
        <externalDeveloperName>Competition__c</externalDeveloperName>
        <label>Competition__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionReceivedId__c</fullName>
        <description>ConnectionReceivedId</description>
        <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
        <label>ConnectionReceivedId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionSentId__c</fullName>
        <description>ConnectionSentId</description>
        <externalDeveloperName>ConnectionSentId</externalDeveloperName>
        <label>ConnectionSentId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConvertedAccountId__c</fullName>
        <description>ConvertedAccountId</description>
        <externalDeveloperName>ConvertedAccountId</externalDeveloperName>
        <label>ConvertedAccountId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConvertedAccountId_grax_xf_account__c</fullName>
        <description>ConvertedAccountId_grax_xf_account</description>
        <externalDeveloperName>ConvertedAccountId_grax_xf_account</externalDeveloperName>
        <label>ConvertedAccountId_grax_xf_account</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConvertedContactId__c</fullName>
        <description>ConvertedContactId</description>
        <externalDeveloperName>ConvertedContactId</externalDeveloperName>
        <label>ConvertedContactId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConvertedContactId_grax_xf_contact__c</fullName>
        <description>ConvertedContactId_grax_xf_contact</description>
        <externalDeveloperName>ConvertedContactId_grax_xf_contact</externalDeveloperName>
        <label>ConvertedContactId_grax_xf_contact</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConvertedDate__c</fullName>
        <description>ConvertedDate</description>
        <externalDeveloperName>ConvertedDate</externalDeveloperName>
        <label>ConvertedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConvertedDate_c__c</fullName>
        <description>ConvertedDate__c</description>
        <externalDeveloperName>ConvertedDate__c</externalDeveloperName>
        <label>ConvertedDate__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConvertedOpportunityId__c</fullName>
        <description>ConvertedOpportunityId</description>
        <externalDeveloperName>ConvertedOpportunityId</externalDeveloperName>
        <label>ConvertedOpportunityId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConvertedOpportunityId_grax_xf_opportuni__c</fullName>
        <description>ConvertedOpportunityId_grax_xf_opportunity</description>
        <externalDeveloperName>ConvertedOpportunityId_grax_xf_opportunity</externalDeveloperName>
        <label>ConvertedOpportunityId_grax_xf_opportuni</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Month_c__c</fullName>
        <description>Converted_Month__c</description>
        <externalDeveloperName>Converted_Month__c</externalDeveloperName>
        <label>Converted_Month__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <description>CountryCode</description>
        <externalDeveloperName>CountryCode</externalDeveloperName>
        <label>CountryCode</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <externalDeveloperName>Country</externalDeveloperName>
        <label>Country</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Month_c__c</fullName>
        <description>Create_Month__c</description>
        <externalDeveloperName>Create_Month__c</externalDeveloperName>
        <label>Create_Month__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <description>CreatedById</description>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>CreatedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById_grax_xf_user__c</fullName>
        <description>CreatedById_grax_xf_user</description>
        <externalDeveloperName>CreatedById_grax_xf_user</externalDeveloperName>
        <label>CreatedById_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>CreatedDate</description>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedDate_c__c</fullName>
        <description>CreatedDate__c</description>
        <externalDeveloperName>CreatedDate__c</externalDeveloperName>
        <label>CreatedDate__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time_c__c</fullName>
        <description>Created_Date_Time__c</description>
        <externalDeveloperName>Created_Date_Time__c</externalDeveloperName>
        <label>Created_Date_Time__c</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Date_without_Time_c__c</fullName>
        <description>Created_Date_without_Time__c</description>
        <externalDeveloperName>Created_Date_without_Time__c</externalDeveloperName>
        <label>Created_Date_without_Time__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators_c__c</fullName>
        <description>CurrentGenerators__c</description>
        <externalDeveloperName>CurrentGenerators__c</externalDeveloperName>
        <label>CurrentGenerators__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomL_c__c</fullName>
        <description>CustomL__c</description>
        <externalDeveloperName>CustomL__c</externalDeveloperName>
        <label>CustomL__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Days_c__c</fullName>
        <description>DB_Days__c</description>
        <externalDeveloperName>DB_Days__c</externalDeveloperName>
        <label>DB_Days__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DandbCompanyId__c</fullName>
        <description>DandbCompanyId</description>
        <externalDeveloperName>DandbCompanyId</externalDeveloperName>
        <label>DandbCompanyId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_com_Lead_c__c</fullName>
        <description>Data_com_Lead__c</description>
        <externalDeveloperName>Data_com_Lead__c</externalDeveloperName>
        <label>Data_com_Lead__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Converted_c__c</fullName>
        <description>Date_Converted__c</description>
        <externalDeveloperName>Date_Converted__c</externalDeveloperName>
        <label>Date_Converted__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Activity_c__c</fullName>
        <description>Date_of_Last_Activity__c</description>
        <externalDeveloperName>Date_of_Last_Activity__c</externalDeveloperName>
        <label>Date_of_Last_Activity__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week_c__c</fullName>
        <description>Day_of_the_Week__c</description>
        <externalDeveloperName>Day_of_the_Week__c</externalDeveloperName>
        <label>Day_of_the_Week__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Remaining_c__c</fullName>
        <description>Days_Remaining__c</description>
        <externalDeveloperName>Days_Remaining__c</externalDeveloperName>
        <label>Days_Remaining__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity_c__c</fullName>
        <description>Days_Since_Last_Activity__c</description>
        <externalDeveloperName>Days_Since_Last_Activity__c</externalDeveloperName>
        <label>Days_Since_Last_Activity__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Approved_Date_c__c</fullName>
        <description>Deal_Approved_Date__c</description>
        <externalDeveloperName>Deal_Approved_Date__c</externalDeveloperName>
        <label>Deal_Approved_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Timeframe_c__c</fullName>
        <description>Decision_Timeframe__c</description>
        <externalDeveloperName>Decision_Timeframe__c</externalDeveloperName>
        <label>Decision_Timeframe__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delinquency_Risk_Data_c__c</fullName>
        <description>Delinquency_Risk_Data__c</description>
        <externalDeveloperName>Delinquency_Risk_Data__c</externalDeveloperName>
        <label>Delinquency_Risk_Data__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disqual_Reason_c__c</fullName>
        <description>Disqual_Reason__c</description>
        <externalDeveloperName>Disqual_Reason__c</externalDeveloperName>
        <label>Disqual_Reason__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoNotCall_GRAX_boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DoNotCall_GRAX_boolean</description>
        <externalDeveloperName>DoNotCall_GRAX_boolean</externalDeveloperName>
        <label>DoNotCall_GRAX_boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotCall__c</fullName>
        <description>DoNotCall</description>
        <externalDeveloperName>DoNotCall</externalDeveloperName>
        <label>DoNotCall</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailBouncedDate__c</fullName>
        <description>EmailBouncedDate</description>
        <externalDeveloperName>EmailBouncedDate</externalDeveloperName>
        <label>EmailBouncedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailBouncedReason__c</fullName>
        <description>EmailBouncedReason</description>
        <externalDeveloperName>EmailBouncedReason</externalDeveloperName>
        <label>EmailBouncedReason</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email</description>
        <externalDeveloperName>Email</externalDeveloperName>
        <label>Email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_c__c</fullName>
        <description>External_ID__c</description>
        <externalDeveloperName>External_ID__c</externalDeveloperName>
        <label>External_ID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Persona_ID_c__c</fullName>
        <description>Facebook_Persona_ID__c</description>
        <externalDeveloperName>Facebook_Persona_ID__c</externalDeveloperName>
        <label>Facebook_Persona_ID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Fax</description>
        <externalDeveloperName>Fax</externalDeveloperName>
        <label>Fax</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldDoesntExist35__c</fullName>
        <description>FieldDoesntExist35</description>
        <externalDeveloperName>FieldDoesntExist35</externalDeveloperName>
        <label>FieldDoesntExist35</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieldDoesntExist71__c</fullName>
        <description>FieldDoesntExist71</description>
        <externalDeveloperName>FieldDoesntExist71</externalDeveloperName>
        <label>FieldDoesntExist71</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieldDoesntExist99__c</fullName>
        <description>FieldDoesntExist99</description>
        <externalDeveloperName>FieldDoesntExist99</externalDeveloperName>
        <label>FieldDoesntExist99</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>FirstName</description>
        <externalDeveloperName>FirstName</externalDeveloperName>
        <label>FirstName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAXCompanyName__c</fullName>
        <description>GRAXCompanyName</description>
        <externalDeveloperName>GRAXCompanyName</externalDeveloperName>
        <label>GRAXCompanyName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAXDave_c__c</fullName>
        <description>GRAXDave__c</description>
        <externalDeveloperName>GRAXDave__c</externalDeveloperName>
        <label>GRAXDave__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Execution_Unique_Key__c</fullName>
        <description>GRAX_Execution_Unique_Key</description>
        <externalDeveloperName>GRAX_Execution_Unique_Key</externalDeveloperName>
        <label>GRAX_Execution_Unique_Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Execution_Unique_Keys__c</fullName>
        <description>GRAX_Execution_Unique_Keys</description>
        <externalDeveloperName>GRAX_Execution_Unique_Keys</externalDeveloperName>
        <label>GRAX_Execution_Unique_Keys</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Version__c</fullName>
        <description>GRAX_Version</description>
        <externalDeveloperName>GRAX_Version</externalDeveloperName>
        <label>GRAX_Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeocodeAccuracy__c</fullName>
        <description>GeocodeAccuracy</description>
        <externalDeveloperName>GeocodeAccuracy</externalDeveloperName>
        <label>GeocodeAccuracy</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Glossary_of_Terms_c__c</fullName>
        <description>Glossary_of_Terms__c</description>
        <externalDeveloperName>Glossary_of_Terms__c</externalDeveloperName>
        <label>Glossary_of_Terms__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grax_Restore_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Grax_Restore__c</description>
        <externalDeveloperName>Grax_Restore__c</externalDeveloperName>
        <label>Grax_Restore__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfEmail_GRAX_boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HasOptedOutOfEmail_GRAX_boolean</description>
        <externalDeveloperName>HasOptedOutOfEmail_GRAX_boolean</externalDeveloperName>
        <label>HasOptedOutOfEmail_GRAX_boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfEmail__c</fullName>
        <description>HasOptedOutOfEmail</description>
        <externalDeveloperName>HasOptedOutOfEmail</externalDeveloperName>
        <label>HasOptedOutOfEmail</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfFax_GRAX_boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HasOptedOutOfFax_GRAX_boolean</description>
        <externalDeveloperName>HasOptedOutOfFax_GRAX_boolean</externalDeveloperName>
        <label>HasOptedOutOfFax_GRAX_boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfFax__c</fullName>
        <description>HasOptedOutOfFax</description>
        <externalDeveloperName>HasOptedOutOfFax</externalDeveloperName>
        <label>HasOptedOutOfFax</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Budget_c__c</fullName>
        <description>Has_Budget__c</description>
        <externalDeveloperName>Has_Budget__c</externalDeveloperName>
        <label>Has_Budget__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>Id</description>
        <externalDeveloperName>Id</externalDeveloperName>
        <label>Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicator_1_Positive_c__c</fullName>
        <description>Indicator_1_Positive__c</description>
        <externalDeveloperName>Indicator_1_Positive__c</externalDeveloperName>
        <label>Indicator_1_Positive__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicator_1_Strength_c__c</fullName>
        <description>Indicator_1_Strength__c</description>
        <externalDeveloperName>Indicator_1_Strength__c</externalDeveloperName>
        <label>Indicator_1_Strength__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicator_2_Positive_c__c</fullName>
        <description>Indicator_2_Positive__c</description>
        <externalDeveloperName>Indicator_2_Positive__c</externalDeveloperName>
        <label>Indicator_2_Positive__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicator_2_Strength_c__c</fullName>
        <description>Indicator_2_Strength__c</description>
        <externalDeveloperName>Indicator_2_Strength__c</externalDeveloperName>
        <label>Indicator_2_Strength__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicator_3_Positive_c__c</fullName>
        <description>Indicator_3_Positive__c</description>
        <externalDeveloperName>Indicator_3_Positive__c</externalDeveloperName>
        <label>Indicator_3_Positive__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicator_3_Strength_c__c</fullName>
        <description>Indicator_3_Strength__c</description>
        <externalDeveloperName>Indicator_3_Strength__c</externalDeveloperName>
        <label>Indicator_3_Strength__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndividualId__c</fullName>
        <description>IndividualId</description>
        <externalDeveloperName>IndividualId</externalDeveloperName>
        <label>IndividualId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Industry</description>
        <externalDeveloperName>Industry</externalDeveloperName>
        <label>Industry</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalSource__c</fullName>
        <description>InternalSource</description>
        <externalDeveloperName>InternalSource</externalDeveloperName>
        <label>InternalSource</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsConverted_GRAX_boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsConverted_GRAX_boolean</description>
        <externalDeveloperName>IsConverted_GRAX_boolean</externalDeveloperName>
        <label>IsConverted_GRAX_boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsConverted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsConverted</description>
        <externalDeveloperName>IsConverted</externalDeveloperName>
        <label>IsConverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsDeleted</description>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <description>IsLocked</description>
        <externalDeveloperName>IsLocked</externalDeveloperName>
        <label>IsLocked</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsUnreadByOwner_GRAX_boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsUnreadByOwner_GRAX_boolean</description>
        <externalDeveloperName>IsUnreadByOwner_GRAX_boolean</externalDeveloperName>
        <label>IsUnreadByOwner_GRAX_boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUnreadByOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsUnreadByOwner</description>
        <externalDeveloperName>IsUnreadByOwner</externalDeveloperName>
        <label>IsUnreadByOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JigsawContactId__c</fullName>
        <description>JigsawContactId</description>
        <externalDeveloperName>JigsawContactId</externalDeveloperName>
        <label>JigsawContactId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jigsaw__c</fullName>
        <description>Jigsaw</description>
        <externalDeveloperName>Jigsaw</externalDeveloperName>
        <label>Jigsaw</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Know_Decision_Maker_c__c</fullName>
        <description>Know_Decision_Maker__c</description>
        <externalDeveloperName>Know_Decision_Maker__c</externalDeveloperName>
        <label>Know_Decision_Maker__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI_EstimatedRevenue_c__c</fullName>
        <description>LBI__EstimatedRevenue__c</description>
        <externalDeveloperName>LBI__EstimatedRevenue__c</externalDeveloperName>
        <label>LBI__EstimatedRevenue__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI_LatticeScore_c__c</fullName>
        <description>LBI__LatticeScore__c</description>
        <externalDeveloperName>LBI__LatticeScore__c</externalDeveloperName>
        <label>LBI__LatticeScore__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <description>LastActivityDate</description>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>LastActivityDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <description>LastModifiedById</description>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>LastModifiedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedById_grax_xf_user__c</fullName>
        <description>LastModifiedById_grax_xf_user</description>
        <externalDeveloperName>LastModifiedById_grax_xf_user</externalDeveloperName>
        <label>LastModifiedById_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>LastModifiedDate</description>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>LastName</description>
        <externalDeveloperName>LastName</externalDeveloperName>
        <label>LastName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <description>LastReferencedDate</description>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>LastReferencedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastTransferDate_GRAX_date__c</fullName>
        <description>LastTransferDate_GRAX_date</description>
        <externalDeveloperName>LastTransferDate_GRAX_date</externalDeveloperName>
        <label>LastTransferDate_GRAX_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastTransferDate__c</fullName>
        <description>LastTransferDate</description>
        <externalDeveloperName>LastTransferDate</externalDeveloperName>
        <label>LastTransferDate</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <description>LastViewedDate</description>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>LastViewedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_days_c__c</fullName>
        <description>Last_Modified_days__c</description>
        <externalDeveloperName>Last_Modified_days__c</externalDeveloperName>
        <label>Last_Modified_days__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>Latitude</description>
        <externalDeveloperName>Latitude</externalDeveloperName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latitude_c__c</fullName>
        <description>Latitude__c</description>
        <externalDeveloperName>Latitude__c</externalDeveloperName>
        <label>Latitude__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <description>LeadSource</description>
        <externalDeveloperName>LeadSource</externalDeveloperName>
        <label>LeadSource</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Age_c__c</fullName>
        <description>Lead_Age__c</description>
        <externalDeveloperName>Lead_Age__c</externalDeveloperName>
        <label>Lead_Age__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Age_days_c__c</fullName>
        <description>Lead_Age_days__c</description>
        <externalDeveloperName>Lead_Age_days__c</externalDeveloperName>
        <label>Lead_Age_days__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Notes_c__c</fullName>
        <description>Lead_Notes__c</description>
        <externalDeveloperName>Lead_Notes__c</externalDeveloperName>
        <label>Lead_Notes__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Number_c__c</fullName>
        <description>Lead_Number__c</description>
        <externalDeveloperName>Lead_Number__c</externalDeveloperName>
        <label>Lead_Number__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Quality_c__c</fullName>
        <description>Lead_Quality__c</description>
        <externalDeveloperName>Lead_Quality__c</externalDeveloperName>
        <label>Lead_Quality__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Rank_c__c</fullName>
        <description>Lead_Rank__c</description>
        <externalDeveloperName>Lead_Rank__c</externalDeveloperName>
        <label>Lead_Rank__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Value_c__c</fullName>
        <description>Lead_Score_Value__c</description>
        <externalDeveloperName>Lead_Score_Value__c</externalDeveloperName>
        <label>Lead_Score_Value__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score_c__c</fullName>
        <description>Lead_Score__c</description>
        <externalDeveloperName>Lead_Score__c</externalDeveloperName>
        <label>Lead_Score__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Total_c__c</fullName>
        <description>Lead_Total__c</description>
        <externalDeveloperName>Lead_Total__c</externalDeveloperName>
        <label>Lead_Total__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
</CustomObject>